2016-09-01  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/catalogues.py, typhon/arts/catalogues.py:

	Autopep8.

	Remove unnecessary imports (griddedfield.* and numbers).

	Use 'if isinstance() ...' instead of 'if type() is ...' because
	isinstance also takes into account inheritance.

	* typhon/arts/retrieval.py: Remove unnecessary import numpy.

	* typhon/arts/scattering.py, typhon/arts/utils.py:

	Use 'if isinstance() ...' instead of 'if type() is ...'.

	* typhon/arts/types.py:

	Replace all import * with explicit lists.

2016-09-01  Oliver Lemke  <olemke@core-dump.info>

	* typhon/physics/{em,units}.py: Autopep8 fixes.

2016-08-31  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/atmosphere.py: Added new module.

	Module containing functions directly related to atmospheric sciences.

	* typhon/__init__.py: Import atmosphere module.

	* typhon/constants.py: Added clearnames for gas constants.

	* typhon/thermodynamics.py:

	Added function to calculate the density of gases by application of ideal
	gas law.

	* doc/atmosphere.rst: Documentation for new module.

	* doc/modules.rst: Added new module to table of contents.

2016-08-28  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/math/__init__.py:

	Added a function to calculate column integrals.

2016-08-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/constants.py:

	Added aliases for some constants to make them usable via their clear name.

	* typhon/physics/__init__.py:

	Added planck functions for frequency and wavelength.

2016-08-23  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/plots/__init__.py(get_subplot_arrangement):

	- Added a function to calculate a
	perhaps-not-entirely-optimal-but-still-acceptable subplot arrangement
	depending on how many subplots are to be arranged.

	* typhon/datasets/tovs.py(HIRS._read):

	- Check whether times make sense.  Raise error if they don't.

2016-08-18  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/geodesy/__init__.py:
